Feat : add ckeditor to project

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
     "dom-generator": "^1.1.7"
   }
 }
